--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,21 @@
 	</dependencies>
 
 	<build>
+	<finalName>Demo</finalName>
 		<plugins>
+		<plugin>
+        <groupId>com.spotify</groupId>
+             <artifactId>dockerfile-maven-plugin</artifactId>
+             <version>1.4.3</version>
+             <executions>
+                 <execution>
+                     <id>default</id>
+                     <goals>
+                         <goal>install</goal>
+                     </goals>
+                 </execution>
+             </executions>
+         </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
