added docker and plugin another commit

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
                  <execution>
                      <id>default</id>
                      <goals>
-                         <goal>install</goal>
+                         <goal>build</goal>
                      </goals>
                  </execution>
              </executions>
